--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "winit-gtk"
+name = "winit"
 version = "0.28.6"
 description = "Cross-platform window creation library."
 edition = "2021"
