Allow unused mut

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,7 +108,7 @@ glib-sys = "0.16"
 gtk = "0.16"
 gdk = "0.16"
 gdk-sys = "0.16"
-gdkx11 = "0.16"
+gdkx11-sys = "0.16"
 gdkwayland-sys = "0.16.0"
 gdk-pixbuf = "0.16"
 zbus = "3"
