--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ documentation = "https://docs.rs/winit-gtk"
 name = "winit"
 
 [package.metadata.docs.rs]
-features = [ "serde", "dox" ]
+features = [ "serde" ]
 default-target = "x86_64-unknown-linux-gnu"
 # These are all tested in CI
 targets = [
@@ -33,7 +33,6 @@ wayland-csd-adwaita-crossfont = []
 wayland-csd-adwaita-notitle = []
 android-native-activity = [ "android-activity/native-activity" ]
 android-game-activity = [ "android-activity/game-activity" ]
-dox = [ "gtk/dox" ]
 
 [build-dependencies]
 cfg_aliases = "0.1.1"
@@ -95,15 +94,15 @@ features = [
 
 [target.'cfg(all(unix, not(any(target_os = "redox", target_arch = "wasm32", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
 x11-dl = { version = "2.18.5" }
-cairo-rs = "0.16"
-gio = "0.16"
-glib = "0.16"
-gtk = "0.16"
-gdk = "0.16"
-gdk-sys = "0.16"
-gdkx11-sys = "0.16"
-gdkwayland-sys = "0.16.0"
-gdk-pixbuf = "0.16"
+cairo-rs = "0.18"
+gio = "0.18"
+glib = "0.18"
+gtk = "0.18"
+gdk = "0.18"
+gdk-sys = "0.18"
+gdkx11-sys = "0.18"
+gdkwayland-sys = "0.18.0"
+gdk-pixbuf = "0.18"
 crossbeam-channel = "0.5"
 
 [target.'cfg(target_os = "redox")'.dependencies]
